[package]
name = "luminance"
version = "0.38.0"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "Stateless and type-safe graphics framework"
keywords = ["stateless", "type-safe", "graphics", "luminance"]
categories = ["rendering::graphics-api"]
homepage = "https://github.com/phaazon/luminance-rs"
repository = "https://github.com/phaazon/luminance-rs"
documentation = "https://docs.rs/luminance"
readme = "README.md"
edition = "2018"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["std", "opengl", "gl"]
std = []
opengl = []
webgl = ["serde", "serde_derive", "stdweb", "stdweb-derive", "wasm-bindgen", "webgl_generator"]

[dependencies]
gl = { version = "0.13", optional = true }
serde = { version = "1", optional = true }
serde_derive = { version = "1", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
stdweb = { version = "0.4", optional = true }
stdweb-derive = { version = "0.5", optional = true }

[build-dependencies]
webgl_generator = { version = "0.2", optional = true }

